# splitwise-lunchmoney

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml  cron.yml
src/swlm/: __init__.py  cli.py  config.py  drift.py  lunchmoney_client.py  models.py  money.py  reconcile.py  report.py  runner.py  splitwise_client.py  state.py  wiring.py
tests/: conftest.py  test_config.py  test_drift.py  test_dry_run.py  test_idempotency.py  test_lm_map.py  test_money.py  test_reconcile.py  test_sign.py  test_splitwise_client.py  test_state.py
