[project]
name = "swlm"
version = "0.1.0"
description = "Reconcile Splitwise net position into a Lunch Money clearing account"
authors = [
    { name = "Akshat Sharma", email = "akshatsharma2602@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lunchable>=1.0",
    "httpx>=0.27",
    "typer>=0.12",
]

[project.scripts]
swlm = "swlm.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.6",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".agents", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
